<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_green_bg3">
    <include
        android:id="@+id/fragment_banner"
        layout="@layout/actionbar"
        />
    <include
        android:id="@+id/fragment_banner"
        layout="@layout/divide_h_10"
        />
    <ScrollView android:layout_width="fill_parent"
                android:layout_height="fill_parent">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@color/base_color_text_white"
             android:orientation="horizontal"
             >

             <LinearLayout
                 android:id="@+id/ly_base"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawablePadding="4dp"
                     android:textColor="@color/share_dialog_item"
                     android:gravity="center"
                     android:textSize="14sp"
                     android:layout_marginTop="18dp"
                     android:layout_marginBottom="18dp"
                     android:drawableTop="@drawable/share_icon_wechatfriends"
                     android:text="@string/tiku_base" />
             </LinearLayout>
             <include
                 android:id="@+id/fragment_banner"
                 layout="@layout/divide_2"
                 />
             <LinearLayout
                 android:id="@+id/ly_intensify"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/base_color_text_white"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawablePadding="4dp"
                     android:textColor="@color/share_dialog_item"
                     android:gravity="center"
                     android:textSize="14sp"
                     android:layout_marginTop="18dp"
                     android:layout_marginBottom="18dp"
                     android:drawableTop="@drawable/share_icon_copy_link_selector"
                     android:text="@string/tiku_intensify" />
             </LinearLayout>
             <include
                 android:id="@+id/fragment_banner"
                 layout="@layout/divide_2"
                 />
             <LinearLayout
                 android:id="@+id/ly_sprint"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/base_color_text_white"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawablePadding="4dp"
                     android:textColor="@color/share_dialog_item"
                     android:gravity="center"
                     android:textSize="14sp"
                     android:layout_marginTop="18dp"
                     android:layout_marginBottom="18dp"
                     android:drawableTop="@drawable/share_icon_more_selector"
                     android:text="@string/tiku_sprint"
                     />
             </LinearLayout>
         </LinearLayout>

         <include
             android:id="@+id/fragment_banner"
             layout="@layout/divide_h_10"
             />
         <com.song.zzb.wyzzb.util.xlistview.XListView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/list_study"
            android:scrollbars="none"
             >
         </com.song.zzb.wyzzb.util.xlistview.XListView>
     </LinearLayout>
    </ScrollView>

</LinearLayout>